--- a/CodeOnlyStrideDemo.GameApp/CodeOnlyStrideDemo.GameApp.csproj
+++ b/CodeOnlyStrideDemo.GameApp/CodeOnlyStrideDemo.GameApp.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Stride.Core" Version="4.0.1.1405" />
+    <PackageReference Include="Stride.Engine" Version="4.0.1.1405" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="small_uv.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
 </Project>
