Fix vscode debug settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/CodeOnlyStrideDemo.Windows/bin/Debug/net5.0/CodeOnlyStrideDemo.Windows.dll",
+            "program": "${workspaceFolder}/CodeOnlyStrideDemo.Windows/bin/Debug/net5.0-windows/win-x64/CodeOnlyStrideDemo.Windows.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/CodeOnlyStrideDemo.Windows",
+            "cwd": "${workspaceFolder}/CodeOnlyStrideDemo.Windows/bin/Debug/net5.0-windows/win-x64",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
