Android export's issue is https://github.com/stride3d/stride/issues/1175

--- a/CodeOnlyStrideDemo.GameApp/CodeOnlyStrideDemo.GameApp.csproj
+++ b/CodeOnlyStrideDemo.GameApp/CodeOnlyStrideDemo.GameApp.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Stride.Core" Version="4.0.1.1428" />
     <PackageReference Include="Stride.Engine" Version="4.0.1.1428" />
+
+	<PackageReference Include="Stride.Core.Assets.CompilerApp" Version="4.0.1.1428" IncludeAssets="build;buildTransitive" />
   </ItemGroup>
 
   <ItemGroup>
