--- a/CodeOnlyStrideDemo.Windows/CodeOnlyStrideDemo.Windows.csproj
+++ b/CodeOnlyStrideDemo.Windows/CodeOnlyStrideDemo.Windows.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <Platforms>AnyCPU;ARM64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
