--- a/CodeOnlyStrideDemo.Android/CodeOnlyStrideDemo.Android.csproj
+++ b/CodeOnlyStrideDemo.Android/CodeOnlyStrideDemo.Android.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidNativeLibrary Include="lib\arm64-v8a\libfreetype.so.6" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
